--- a/src/fMain.fmx
+++ b/src/fMain.fmx
@@ -53,6 +53,7 @@ object frmMain: TfrmMain
     URL = 'https://idbkeysgenerator.olfsoftware.fr/'
     onURLClick = OlfAboutDialog1URLClick
     Langue = EN
+    ReplaceMainFormCaption = True
     Left = 472
     Top = 304
   end
@@ -105,8 +106,8 @@ object frmMain: TfrmMain
         Size.Height = 122.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 1
-        Viewport.Width = 616.000000000000000000
-        Viewport.Height = 118.000000000000000000
+        Viewport.Width = 620.000000000000000000
+        Viewport.Height = 122.000000000000000000
       end
       object btnRefreshCode: TButton
         Align = Bottom
@@ -156,7 +157,7 @@ object frmMain: TfrmMain
           Size.Width = 80.000000000000000000
           Size.Height = 22.000000000000000000
           Size.PlatformDefault = False
-          TabOrder = 4
+          TabOrder = 3
           Text = 'Sample'
           TextSettings.Trimming = None
           OnClick = btnPascalSampleClick
@@ -175,8 +176,8 @@ object frmMain: TfrmMain
         Size.Height = 148.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 1
-        Viewport.Width = 616.000000000000000000
-        Viewport.Height = 144.000000000000000000
+        Viewport.Width = 620.000000000000000000
+        Viewport.Height = 148.000000000000000000
       end
     end
   end
