--- a/src/fMain.fmx
+++ b/src/fMain.fmx
@@ -43,8 +43,8 @@ object frmMain: TfrmMain
   end
   object OlfAboutDialog1: TOlfAboutDialog
     Titre = 'IDB Keys Generator'
-    VersionNumero = '1.0'
-    VersionDate = '20240426'
+    VersionNumero = '1.1'
+    VersionDate = '20240807'
     MultiResBitmap = <
       item
       end>
@@ -53,6 +53,7 @@ object frmMain: TfrmMain
     URL = 'https://idbkeysgenerator.olfsoftware.fr/'
     onURLClick = OlfAboutDialog1URLClick
     Langue = EN
+    Copyright = '2024 Patrick Pr'#233'martin'
     ReplaceMainFormCaption = True
     Left = 472
     Top = 304
@@ -106,8 +107,8 @@ object frmMain: TfrmMain
         Size.Height = 122.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 1
-        Viewport.Width = 620.000000000000000000
-        Viewport.Height = 122.000000000000000000
+        Viewport.Width = 616.000000000000000000
+        Viewport.Height = 118.000000000000000000
       end
       object btnRefreshCode: TButton
         Align = Bottom
@@ -157,7 +158,7 @@ object frmMain: TfrmMain
           Size.Width = 80.000000000000000000
           Size.Height = 22.000000000000000000
           Size.PlatformDefault = False
-          TabOrder = 3
+          TabOrder = 4
           Text = 'Sample'
           TextSettings.Trimming = None
           OnClick = btnPascalSampleClick
@@ -176,8 +177,8 @@ object frmMain: TfrmMain
         Size.Height = 148.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 1
-        Viewport.Width = 620.000000000000000000
-        Viewport.Height = 148.000000000000000000
+        Viewport.Width = 616.000000000000000000
+        Viewport.Height = 144.000000000000000000
       end
     end
   end
